--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css"
   />
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-  <script src="get_parameter_from_slider.js"></script>
-  <script src="update_checkboxes.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <meta charset="UTF-8" />
@@ -118,6 +116,8 @@
     canvas {
       transition: font-color 0.25s ease-in-out;
       width: 100%;
+      height: auto;
+    display: block;
     }
 
     .content {
