--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     </button>
     <img src="" class="logo" />
     <div>
-        <button class="icon-button">
+        <button class="icon-button" onclick="window.location.href='https://luismcmillan.github.io/this-is-me/'">
             <i class="material-icons">home</i>
           </button>
           <button class="icon-button">
