--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       flex-direction: column;
       align-items: center;
       font-family: 'Arial', sans-serif;
+      background-color: rgb(215, 215, 215);
     }
 
     .logo {
@@ -97,7 +98,7 @@
       margin: 10px 0;
     }
 
-    .price_adjustment {
+    .circle_adjustment {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -131,7 +132,7 @@
       align-items: center;
       width: 100%;
       height: 20%;
-      padding-top: 60px; /* Adjusted to give space for the fixed header */
+      padding-top: 10px; /* Adjusted to give space for the fixed header */
     }
 
     .hamburger-button {
@@ -229,7 +230,7 @@
     </button>
     <img src="" class="logo" />
     <div>
-        <button class="icon-button" onclick="window.location.href='https://luismcmillan.github.io/this-is-me/'">
+        <button class="icon-button" onclick="window.location.href='http://18.184.117.30:3000/'">
             <i class="material-icons">home</i>
           </button>
           <button class="icon-button">
@@ -277,7 +278,7 @@
         <span class="close" onclick="closeModal()">&times;</span>
       </div>
       <div class="price-adapt">
-        <div class="price_adjustment">
+        <div class="circle_adjustment">
             <h1 class="price-description">Circle size</h1>
             <p class="slider">
               <input
@@ -293,7 +294,7 @@
             </p>
           </div>
 
-        <div class="price_adjustment">
+        <div class="circle_adjustment">
           <h1 class="price-description">Gravity</h1>
           <p class="slider">
             <input
@@ -311,7 +312,7 @@
 
         
 
-        <div class="price_adjustment">
+        <div class="circle_adjustment">
           <h1 class="price-description">Rejection</h1>
           <p class="slider">
             <input
